subscription vc and load to testFligtht

--- a/AIApp/Shared/Resources/Strings/en.lproj/Localizable.strings
+++ b/AIApp/Shared/Resources/Strings/en.lproj/Localizable.strings
@@ -16,3 +16,9 @@ subscription-first-advatage = "Discount for all packs";
 subscription-second-advatage = "Add 2 additional avatars for free";
 subscription-third-advatage = "Free packs every month ";
 subscription-fourth-advatage = "Always ad-free";
+subscription-price = "<price>%@</price>";
+subscription-price-trial = "<price>%@</price> <trial>after %@ trial</trial>";
+subscription-price-subtitle = "Auto-renewable. Cancel anytime";
+subscription-enable-trial-title = "Wanna explore first?";
+subscription-enable-trial-subtitle = "Enable free trial";
+subscription-trial-enabled = "Free trial enabled";
